# lmi-solver-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classldlt__ext.html  classlmi0__oracle.html  classlmi__old__oracle.html  classlmi__oracle.html  classlmisolver_1_1LmiSolver.html  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_98090a92051fb9ef47f2cbcb39866159.html  doc-dev.yml  files.html  greeter_8h.html  index.html  iwyu.out  ldlt__ext_8hpp.html  lmi0__oracle_8hpp.html  lmi__old__oracle_8hpp.html  lmi__oracle_8hpp.html  modules.html  namespacelmisolver.html  namespaces.html  pages.html  searchdata-v1.js  specific.cmake  xmake.lua
.github/workflows/: benchmark.yml  documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
.trunk/: trunk.yaml
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  references  repository  toolchain
bench/: BM_lmi.cpp  CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt  Doxyfile  conf.py
include/bingo/: greeter.h
include/lmisolver/: greeter.h  ldlt_ext.hpp  ldlt_mgr.hpp  lmi0_oracle.hpp  lmi_old_oracle.hpp  lmi_oracle.hpp
source/: greeter.cpp  ldlt_ext.cpp  ldlt_mgr.cpp  lmi0_oracle.cpp  lmi_old_oracle.cpp  lmi_oracle.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.old  main.cpp  test_integers.cpp  test_ldlt.cpp  test_lmi.cpp  test_lmi_integration.cpp  test_lmi_old.cpp  test_lmisolver.cpp
test_installed/: CMakeLists.txt
